# node-drive

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DRAG_DROP_FEATURE.md  DRAWER_FEATURE.md  FIXES_SUMMARY.md  MOVE_FIX_COMPLETE.md  README.md  build.rs  data.db  install-dufs.sh  install.sh  report.md
.github/workflows/: ci.yaml  release.yaml  release.yml
assets/: .gitignore  README.md  index.css  index.html  index.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
assets/public/: manifest.json  sw.js
assets/src/: App.tsx  app.tsx  esm-imports.js  main.css  main.tsx  node-drive.js  state.ts  type.d.ts  utils.js  utils.ts
assets/tests/: README.md  file-operations.spec.ts  folder.spec.ts  navigation.spec.ts  provenance.spec.ts  upload.spec.ts  workflow.spec.ts
examples/: inspect_ots.rs
prompts/: app-renderer.txt  code-modifier.txt  metadata-extractor.txt
src/: ai.rs  args.rs  config.rs  database.rs  file_utils.rs  lib.rs  main.rs  models.rs  openapi.rs  ots_stamper.rs  provenance.rs  provenance_utils.rs  seed.rs  server.rs
src/handlers/: apps.rs  dashboard.rs  database.rs  docs.rs  mod.rs  projects.rs
src/server/: api_handlers.rs  handlers.rs  mod.rs  path_item.rs  provenance_handlers.rs  response_utils.rs  router.rs  (+1 more)
templates/: db-viewer.js  notepad.js
tests/: allow.rs  args.rs  assets.rs  auth.rs  auth.rs.backup  bind.rs  cli.rs  config.rs  fixtures.rs  health.rs  hidden.rs  http.rs  http_logger.rs  range.rs  render.rs  single_file.rs  symlink.rs  tls.rs  utils.rs  webdav.rs
(+33 files in other folders)
